# Autotrack

./: .gitignore  Makefile  pyproject.toml
configs/devices/: edelkrone_template.yaml
src/autotrack/: __init__.py  detector.py  export.py  main.py  tracker_manager.py
src/autotrack/camera/: __init__.py  base.py  edelkrone.py  playback.py
src/autotrack/utils/: __init__.py  device.py  recorder.py  thread_worker.py
tests/: conftest.py  test_camera_base.py  test_detector.py  test_device.py  test_edelkrone.py  test_playback.py  test_recorder.py  test_thread_worker.py  test_tracker_manager.py
yolov8n.mlpackage/: Manifest.json
yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
