[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrack"
version = "2.0.0"
description = "Automated plane tracking for PTZ cameras"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "boxmot>=10.0.0",
    "opencv-contrib-python>=4.9.0",
    "pygame>=2.5.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "pandas>=2.0.0",
    "simple-pid>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
autotrack = "autotrack.main:main"
autotrack-export = "autotrack.export:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
